--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,19 @@
+html {
+	width: 100%;
+	height: 100%;
+	background: -webkit-radial-gradient(
+			closest-corner,
+			rgba(16, 47, 70, 0) 60%,
+			rgba(16, 47, 70, 0.26)
+		),
+		-webkit-linear-gradient(108deg, #26d0ce, #1a2980 90%);
+}
+body {
+	width: 100%;
+	height: 100%;
+	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpiZmBg6AZiDiBWZ4YyQMCOCcYA4kMAAQYAHyYCCUdxidgAAAAASUVORK5CYII=');
+}
+
 .tooltip {
 	@apply invisible absolute;
 }
