--- a/styles/general.css
+++ b/styles/general.css
@@ -13,6 +13,12 @@ body {
 	height: 100%;
 	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpiZmBg6AZiDiBWZ4YyQMCOCcYA4kMAAQYAHyYCCUdxidgAAAAASUVORK5CYII=');
 }
+hr {
+	border: 0;
+	border-top: 1px solid #63a9ff;
+	border-bottom: 1px solid #63a9ff;
+	opacity: 0.3;
+}
 
 .tooltip {
 	@apply invisible absolute;
